# proxy

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  HANDOFF.md  PROGRESS.md  README.md  REDESIGN-REPORT.md  RUNBOOK.md  SETUP.md  alembic.ini  conftest.py  eval_runner.py  pyproject.toml  runner.py
.claude/: settings.json
.claude/agents/: eval-runner.md  planner-reviewer.md  verifier.md
.github/workflows/: contracts-check.yml  e2e-nightly.yml  guards.yml  verify.yml
acceptance/doc01/: assurance-limits.yaml  manifest.yaml
acceptance/doc03/: dependency_manifest.yaml
apps/: pnpm-workspace.yaml
apps/connect/: package.json
apps/tile/: package.json
components/: 1.1-ingest.md  1.2-graph.md  _TEMPLATE.md
config/: defaults.toml
criteria/: 01-code-intelligence.md  GENERATOR.md
deploy/: Dockerfile  cloudbuild.yaml  harden.sh  promote.sh
deploy/code_intel/: Dockerfile
deploy/control_plane/: Dockerfile
deploy/meeting_runtime/: Dockerfile
docs/: BUILD-PLAN-AMENDMENT-01.md  BUILD-SYSTEM.md  FINAL-OVERVIEW.md  TESTING-STRATEGY.md  VERIFICATION-PROTOCOL.md
eval/: README.md
eval/1.1/: scenarios.json
eval/1.2/: scenarios.json
evidence/: README.md  doc00-EXCEPTIONS.md  doc00-deferred.md  doc00-extraction-count.md  doc00-morning-debt.md  doc00-review-gaps-outstanding.md  doc00-sweep.md  doc00-verdict.md  doc01-EXCEPTIONS.md  doc01-deferred.md  doc01-extraction-count.md  doc01-sweep.md  doc01-verdict.md  doc02-EXCEPTIONS.md  doc02-deferred.md  doc02-extraction-count.md  doc02-review-gaps-outstanding.md  doc02-sweep.md  doc02-verdict.md
fixtures/1.1/: README.md
harness/: HARNESS.md  guard.py  guard.py.off  post_edit_test.py  stop_verify.py  verify.sh
infra/: cloudsql.tf  code_intel.tf  control_plane.tf  data_protection.tf  deployables.tf  firewall.tf  iam.tf  meeting_runtime.tf  network.tf  pipeline.tf  secrets.tf  setup-remote-state.sh  snapshots.tf  storage.tf
libs/agentkit/: __init__.py  pyproject.toml
libs/agentkit/src/agentkit/: __init__.py  abort.py  config.py  deltas.py  execution.py  resume.py  tools.py  tracing.py  wake_cache.py
libs/db/: __init__.py  pyproject.toml
libs/db/migrations/: doc03_notes_store.sql
libs/db/src/db/: __init__.py  config.py  database.py  sync.py
libs/db/src/db/repos/: __init__.py  cost.py  drafts.py  identity.py  meetings.py  notes.py  repositories.py  sessions.py  transcript.py  webhooks.py
libs/http/: __init__.py  pyproject.toml
libs/http/src/http/: __init__.py  dispatch.py  external.py  internal.py
libs/llm/: __init__.py  pyproject.toml
libs/llm/src/llm/: __init__.py  client.py  prompts.py  routing.py
libs/ops/: __init__.py  pyproject.toml
libs/ops/src/lint/: __init__.py  naming.py
libs/ops/src/ops/: __init__.py  affinity.py  capability.py  check_banned_strings.py  check_field_contract.py  check_sdk_isolation_triad.py  check_secret_bindings.py  claim.py  cost.py  logging.py  nango.py  operation_run.py  reconcile.py  redaction.py  sandbox.py  sandbox_provider.py  secrets.py  sentry.py  telemetry.py
migrations/: env.py
orchestrator/: EXHAUSTIVE-COVERAGE.md  FINAL-OPTIMIZATIONS.md  FREEZE-AUDIT-REPORT.md  LAUNCH-AUTONOMOUS.md  LOOP-UPGRADES.md  ORCHESTRATION.md  criteria_coverage_gate.py  demo-doc08-orb-criteria.yaml  extraction_count_gate.py  ladder_augment.py  ladder_critics.py  ladder_runner.py  ladder_schema_gate.py  launch.sh  model-routing.json  model_routing.py  orchestrate.py  supervise.sh  test_execution_hardening.py  test_ladder_schema_gate.py  test_launch_resilience.py  test_preflight_hardening.py  verify_doc.md  watchdog.sh
scripts/: record_cassettes.sh
services/: __init__.py
services/code_intel/: __init__.py  crypto.py  pyproject.toml
services/code_intel/src/code_intel/: __init__.py  cloner.py  config.py  coverage.py  crypto.py  direct.py  exclusions.py  gitio.py  graph.py  graph_builder.py  graph_gc.py  graph_store.py  mcp_server.py  meeting.py  orm.py  paths.py  pipeline.py  readiness.py  repo_provider.py  results.py  sandbox.py  verifier.py  webhook_handler.py
services/harness/: __init__.py  pyproject.toml
services/harness/src/control_plane/: __init__.py  accept.py  app.py  authz.py  internal.py  webhooks.py
services/harness/src/harness/: __init__.py  accept_route.py  budget.py  close.py  emit.py  heartbeat.py  meetings.py  orchestrator.py  recovery.py  server.py  session.py  settings.py  stt.py  wake.py  webhooks.py
services/scribe/: __init__.py  pyproject.toml
services/scribe/src/scribe/: __init__.py  call.py  close.py  coalescer.py  corrections.py  cost.py  events.py  notes.py  notes_artifact.py  notes_reader.py  parse.py  pipeline.py  prefix.py  quality_gate.py  referent.py  rolling_summary.py  schema.py  tool.py
services/transport/: __init__.py  pyproject.toml
services/transport/src/transport/: __init__.py  boundary.py  canvas.py  carrier.py  chat.py  config.py  consent.py  cost.py  delivery.py  events.py  external.py  failure.py  fakes.py  hearing.py  join.py  limiter.py  media.py  outbound.py  recall.py  resolution.py  seams.py  signals.py  speak.py  stt.py  surface.py  tts.py  turn.py  wire.py
services/workroom/: __init__.py  pyproject.toml
services/workroom/src/workroom/: __init__.py  agent_config.py  drafts.py  objectstore.py  recovery.py
sources/: README.md
specs/: DD00-contracts.md  DD00-product-spine.md  proxy-dd01-estate-understanding-spec.md  proxy-dd02-meeting-understanding-spec (1).md  proxy-dd03-reactive-spec.md  proxy-dd04-proactive-spec.md  proxy-dd05-workroom-spec.md  proxy-dd06-experience-spec.md
spike/: __init__.py  gate.py  step1.py
src/: __init__.py
tests/: conftest.py  test_canonical_contracts.py  test_gv_graph_versions.py  test_invariants.py  test_m1_connection.py  test_m2_clone.py  test_m3_exclusions.py  test_m4_substrate.py  test_m5_tools.py  test_m6_readiness.py  test_m7_freshness.py  test_m8_lsp.py  test_sandbox_boundary.py
tools/: derive_goldens.py  linux-verify-requirements.txt  verify-linux.sh
verification/: .gitignore  README.md  conftest.py  pytest.ini  run_full_verification.sh
(+394 files in other folders)
