[project]
name = "proxy"
version = "0.0.0"
description = "Proxy — AI meeting participant (monorepo root)."
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/*", "libs/*"]

[tool.ruff]
line-length = 120
# The sealed acceptance tests under tests/ and the legacy doc-generation harness
# under src/proxy are not product code; the ruff style gate applies to the
# services/ + libs/ product surface. force-exclude honours these even when the
# paths are passed explicitly (as harness/verify.sh does).
extend-exclude = ["src/proxy", "tests", ".venv"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.12"
namespace_packages = true
explicit_package_bases = true
mypy_path = "."

# Legacy doc-generation harness under src/proxy is not part of the Doc 00 product
# surface (services/ + libs/); it predates mypy --strict. Scope it out so the
# strict gate applies to the product code the acceptance bundle actually covers.
[[tool.mypy.overrides]]
module = ["proxy", "proxy.*", "src.proxy", "src.proxy.*"]
ignore_errors = true
ignore_missing_imports = true

# Third-party packages that ship no type information.
[[tool.mypy.overrides]]
module = [
    "asyncpg", "asyncpg.*", "psycopg", "psycopg.*", "psycopg_pool", "psycopg_pool.*",
    "alembic", "alembic.*", "testing", "testing.*", "uvicorn", "uvicorn.*",
    "authlib", "authlib.*",
]
ignore_missing_imports = true

# Cross-package workspace imports (src-layout): a member importing another member by
# its installed top-level name (e.g. ``from contracts.channels import ...``) resolves
# at runtime via the editable install, but the strict walk names the same source by
# its filesystem path (``libs.contracts.src.contracts``), so the import can't be tied
# back to the checked source without a dual-name collection error. Silence the missing
# import for the top-level name; the module's own source is still fully strict-checked
# under its walk name. (Doc 02 transport is the first cross-member runtime importer.)
[[tool.mypy.overrides]]
module = ["contracts.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["harness", ".venv", "node_modules", "fixtures"]
# doc00 and doc01 each ship a `test_w_workflows.py` / `conftest.py` (no package
# __init__.py); the default prepend import mode collides on the shared basenames.
# importlib mode imports each by full path — no sys.path games, no collision.
addopts = "--import-mode=importlib"
