[project]
name = "db"
version = "0.0.0"
description = "libs.db — asyncpg pool + repos + Alembic."
requires-python = ">=3.12"
dependencies = ["contracts", "pydantic>=2", "asyncpg", "alembic"]

[tool.uv.sources]
contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
