[project]
name = "http"
version = "0.0.0"
description = "libs.http — the one dispatch() funnel."
requires-python = ">=3.12"
dependencies = ["contracts", "pydantic>=2"]

[tool.uv.sources]
contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/http"]
