[project]
name = "ops"
version = "0.0.0"
description = "libs.ops — durable substrate (operation_runs, claim, reconcile)."
requires-python = ">=3.12"
dependencies = ["contracts", "db", "pydantic>=2", "structlog>=24"]

[tool.uv.sources]
contracts = { workspace = true }
db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ops"]
