[project]
name = "harness"
version = "0.0.0"
description = "services.harness — per-meeting asyncio harness + control_plane assembly."
requires-python = ">=3.12"
dependencies = ["contracts", "agentkit", "http", "db", "llm", "ops", "pydantic>=2", "pydantic-settings>=2", "fastapi", "authlib", "itsdangerous"]

[tool.uv.sources]
contracts = { workspace = true }
agentkit = { workspace = true }
http = { workspace = true }
db = { workspace = true }
llm = { workspace = true }
ops = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness", "src/control_plane"]
