[project]
name = "scribe"
version = "0.0.0"
description = "services.scribe — meeting-notes scribe."
requires-python = ">=3.12"
dependencies = ["contracts", "llm", "db", "ops", "http", "pydantic>=2"]

[tool.uv.sources]
contracts = { workspace = true }
llm = { workspace = true }
db = { workspace = true }
ops = { workspace = true }
http = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe"]
