[project]
name = "transport"
version = "0.0.0"
description = "services.transport — bot/STT/TTS/turn transport."
requires-python = ">=3.12"
dependencies = ["contracts", "pydantic>=2"]

[tool.uv.sources]
contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transport"]
