[project]
name = "workroom"
version = "0.0.0"
description = "services.workroom — sandboxed Workroom (E2B mutable work)."
requires-python = ">=3.12"
dependencies = ["contracts", "agentkit", "db", "ops", "pydantic>=2"]

[tool.uv.sources]
contracts = { workspace = true }
agentkit = { workspace = true }
db = { workspace = true }
ops = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workroom"]
